# awl-text-sync

./: .gitignore  AGENTS.md  README.md  SECURITY.md  build-ui-clean.bat  decisions.md  identity.md  learnings.md  progress.md  pyproject.toml
.cursor/rules/: awl-python.mdc  project-prime.mdc
.cursor/skills/awl-language-reference/: SKILL.md
.cursor/skills/awl-language-reference/references/: data-types.md  instructions-english.md  instructions-german.md
.cursor/skills/awl-plc-debugger/: SKILL.md
.cursor/skills/awl-plc-debugger/fixtures/: snapshot_mixed_db.expected.json  snapshot_mixed_db.txt  snapshot_motor_off.expected.json  snapshot_motor_off.txt  snapshot_overflow.expected.json  snapshot_overflow.txt  tracer_v1.json
.cursor/skills/awl-plc-debugger/references/: register-reference.md  snapshot-analysis-guide.md
.cursor/skills/awl-safety-critical/: SKILL.md
.cursor/skills/awl-step7/: SKILL.md
.cursor/skills/awl-step7/templates/: data_block.awl  function.awl  function_block.awl  instance_db.awl
.cursor/skills/awlsim-runner/: SKILL.md
.cursor/skills/awlsim-runner/scripts/: awl_dependency_mapper.py  awlsim_runner.py  awlsim_tracer.py  detect_block.py  install_awlsim.sh  mnemonics.py  pattern_diff.py  sfb_rewriter.py  stl_precheck.py  test_harness_generator.py  test_wrapper.py
.cursor/skills/project-knowledgebase/: SKILL.md  reference.md
.cursor/skills/project-session-handoff/: SKILL.md
.cursor/skills/siemens-awl-stl-agent-handoff/: SKILL.md
.cursor/skills/siemens-awl-stl-agent-handoff/evals/: evals.json
.cursor/skills/siemens-awl-stl-agent-handoff/references/: classic-stl.md  misconceptions.md  tia-plccheck.md  trigger-queries.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
awl_text_sync/: __init__.py  __main__.py  agent_docs.py  builder.py  call_graph.py  config.py  encoding.py  main.py  models.py  parser.py  plccheck_extra.py  splitter.py  stl_validation.py  symbols.py  ui.py  validator.py  writer.py
awl_text_sync/templates/agent_docs/: AGENTS.md
awl_text_sync/templates/agent_docs/docs/: awl_reference.md  (+1 more)
docs/: siemens_plccheck_experiment.md  validate_stl_rules.md  validate_stl_rules_german_mnemonics.md  workflow.mermaid  working_rules.md
scripts/: run_siemens_demo_D0.ps1  siemens_plccheck_spike.ps1
tests/: test_agent_docs.py  test_parser_and_naming.py  test_plccheck_extra.py  test_plccheck_integration_optional.py
tests/fixtures/: README.md
tests/fixtures/classic_demo_workspace/: .gitignore
tests/fixtures/plccheck_demo_minimal/: .plc.json  Main.scl  README.md
(+8 files in other folders)
